1.2.4 (20081114)
================

- Fix bug whereby the precedence wasn't reset correctly after processing a
  pair of brackets. This would lead to problems with calculations where a
  power directly followed a close bracket: [2+3]^3.
- Included Brazilian Portugese translations thanks to Ricardo Ichizo.
- Included French translations thanks to Djalil Oulmane.
- Included Spanish translations thanks to Daniel.


1.2.3 (20080916)
================

- By request, explicit support for square root (sqrt) has been added.


1.2.2 (20080915)
================

- Added support for the "-a" option which prints out all of the available
  operators, functions and constants.


1.2.1 (20080718)
================

- Fixed a string buffer that was being allocated one byte too small and would
  occasionally lead to spurious "invalid operator" errors.


1.2.0 (20080609)
================

- Included Hebrew translations thanks to Yaron and a start at Spanish
  translations thanks to Eduardo Ruiz.
- Support for % (modulus) operator, sin/cos/tan/asin/acos/atan functions and
  pi/exp constants.


1.1.0 (20080601)
================

- Added the "-f filename" option. This will process each line of "filename" as
  though it was typed in at the command line.
- Added the "-i" option which does the same as "-f" but for stdin.
- Added support for log/ln functions.


1.0.1 (20080322)
================

- Fixed missing config.mk from distributed tarball.


1.0 (20080322)
==============

- i18n / L10n support.
- Big cleanup of directory structure.
- Makefile improvements - including use of DESTDIR.
- Change license to GPL - many of the Makefile improvements come from a GPL
  project.


20070712
========

- Added the "-r" option which causes the output to use neither SI prefixes nor
  exponents.


20070702
========

- Added the "-q" option which causes ralcalc to only display the result rather
  than the input and the result (or the input and errors).
