@@ -1,3 +1,12 @@
+x.x.x (200xxxxx)
+================
+
+- Preserve some spaces in equations when output. This will compress multiple
+  spaces into a single space, but there will always be at least a single space
+  in the output if there is one in the input.
+- Included Basque translations thanks to Mikel Alzibar.
+
+
 1.2.4 (20081114)
 ================
 
